# story-forge

./: .clinerules  .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: __init__.py  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: fa616d2f83a2_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  base_agent.py  continuity_agent.py  judge_agent.py  planner_agent.py  prose_judge_agent.py  scene_writer_agent.py  wordsmith_agent.py
backend/app/api/: __init__.py
backend/app/core/: events.py  logging.py
backend/app/db/: __init__.py  base.py  declarative_base.py  session.py
backend/app/models/: __init__.py  agent.py  component.py  mixins.py  story.py
backend/app/orchestrator/: __init__.py  pipeline.py
backend/app/schemas/: __init__.py  agent.py  component.py  judge.py  revision.py  sampler.py  story.py
backend/app/services/: __init__.py  chapter_service.py  component_service.py  reroll_service.py  (+4 more)
backend/scripts/: __init__.py  batch_import.py  check_constraints.py  demo_phase3.py  demo_phase4.py  demo_phase45.py  demo_phase5.py  demo_phase6.py  export_components.py  manage_component_types.py  manage_components.py  manage_constraints.py  validate_phase2.py  validate_phase3.py  validate_phase4.py  validate_phase5.py  validate_phase6.py  validate_phase7.py  validate_phase8a.py
frontend/: package-lock.json  package.json
infra/: postgres_bootstrap.sql
~/story-forge/: .env.example  .gitignore  requirements-dev.txt  requirements.txt
(+15 files in other folders)
